37-Finalize project  - Resolve all TODOs  - Move code constants from SKI.java into definitions file  - Move examples from Main.java into test text file  - Improved Exception handling for shallow  - created READMI