@@ -23,11 +23,6 @@ dependencies {
     configurations.implementation.extendsFrom(configurations.extraLibs)
 }
 
-//To enable java18 preview features
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
-}
-
 test {
     jvmArgs(['--enable-preview'])
 }
